refactor: 프로젝트 전반 스타일 정리
구조 변경만 수행하며 작동은 유지한다.

- 불필요한 @Autowired 제거 (생성자 1개면 자동 주입)
  - MemberController, AdminMemberController, AuthenticationResolver, JwtProvider
- 불필요한 Javadoc 제거 (@author/@since 태그, 자명한 메서드 설명)
  - MemberController, AdminMemberController, Member, MemberRequest,
    AuthenticationResolver, JwtProvider
- 불필요한 블록 주석 제거
  - OptionController, KakaoAuthController, OptionNameValidator
- Collectors.toList() → .toList() 통일 (OptionController)
- 미사용 import 제거 (java.util.stream.Collectors)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>