@@ -15,12 +15,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 
-/*
- * Each product must have at least one option at all times.
- * Option names are validated against allowed characters and length constraints.
- */
 @RestController
 @RequestMapping(path = "/api/products/{productId}/options")
 public class OptionController {
@@ -40,7 +35,7 @@ public class OptionController {
         }
         List<OptionResponse> options = optionRepository.findByProductId(productId).stream()
             .map(OptionResponse::from)
-            .collect(Collectors.toList());
+            .toList();
         return ResponseEntity.ok(options);
     }
 
